--- a/res/css/babovka.css
+++ b/res/css/babovka.css
@@ -1,3 +1,9 @@
+body {
+    font-family: 'Open Sans', Arial, sans-serif;
+    background-color: #f4f4f9;
+    margin: 0;
+    padding: 0;
+}
 .recipe-detail {
     padding: 50px 20px;
     max-width: 800px;
