--- a/res/css/babovka.css
+++ b/res/css/babovka.css
@@ -11,6 +11,7 @@ body {
     background: #fff;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     border-radius: 8px;
+    box-shadow: 0 0 10px 10px #00d4d4;
 }
 
 .recipe-detail h1 {
